--- a/Cargo.toml
+++ b/Cargo.toml
@@ -41,6 +41,7 @@ indexmap = "2.2.6"
 bitflags = "2.5.0"
 atty = "0.2.14"
 unicode-segmentation = "1.10.1"
+unicode-width = "0.1.14"
 
 [dev-dependencies]
 assert_matches = "1.5.0"
